Modify info images styling, fix header overflow

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@ footer {
 
 .left-hero {
     width: 500px;
-    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -60,7 +59,7 @@ footer {
 .right-hero > .images {
     color: #ffffe8;
     width: 500px;
-    height: 200px;
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,7 +83,7 @@ footer {
     font-size: 32px;
     color: #5C0044;
     font-weight: 800;
-    margin: 32px 0;
+    margin: 40px 0;
 }
 
 .info-container {
@@ -96,16 +95,15 @@ footer {
 }
 
 .info {
-    max-width: 100px;
+    max-width: 200px;
     color: #5C0044;
 }
 
 .info > .images {
-    border: 2px solid #FF52A2;
     border-radius: 8px;
-    width: 100px;
-    height: 100px;
-    margin-bottom: 10px;
+    width: 100%;
+    height: 420px;
+    margin-bottom: 24px;
 }
 
 .quote-container {
@@ -196,3 +194,86 @@ footer {
     align-items: center;
     padding: 32px;
 }
+
+
+
+.card {
+    width: 100%;
+    height: 100%;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transition: all .5s linear;
+    transition: all .5s linear;
+    border-radius: 10px;
+}
+
+.face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: #FF52A2;
+    border-radius: 10px;
+    
+}
+
+.back {
+    overflow: hidden;
+    z-index: -1;
+    display: block;
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    box-sizing: border-box;
+    background-size: cover;
+    background-image: url('images/sword-sakura.png');
+
+    /* &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        -webkit-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg);
+        transform: rotateY(180deg);
+    } */
+}
+
+.front,
+.back {
+    transition: all .5s linear;
+}
+
+.front {
+    background-image: url('images/sword.png');
+    background-size: cover;
+    z-index: 1;
+    box-shadow: 5px 5px 5px #982176;
+}
+
+.back {
+    box-shadow: 0 0 0 #982176;
+}
+
+.hovercard:hover {
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+
+    .front {
+        box-shadow: 0 0 0 #FF52A2;
+    }
+
+    .back {
+        box-shadow: 5px 5px 5px #FF52A2;
+    }
+}
+
+
+
+
+
+
+
